[package]
name = "sctp-proto"
version = "0.8.1"
authors = ["Rain Liu <yliu@webrtc.rs>", "Martin Algesten<martin@algesten.se>"]
edition = "2024"
description = "A pure Rust implementation of SCTP in Sans-IO style"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sctp-proto"
homepage = "https://github.com/algesten/sctp-proto"
repository = "https://github.com/algesten/sctp-proto"
keywords = ["sctp"]
categories = ["network-programming", "asynchronous"]

rust-version = "1.85"

[dependencies]
bytes = "1.5.0"
rand = "0.9"
rustc-hash = "2.1.1"
slab = "0.4.9"
thiserror = "2.0.18"
log = "0.4.21"
crc = "3.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
